Now tooltips are visible again (fixed incompatibility with bootstrap)

--- a/demo/assets/main.css
+++ b/demo/assets/main.css
@@ -46,7 +46,7 @@ svg{
 	stroke-width:0;
 }
 
-text.axe-labels, text.data-labels, text.tooltip{
+text.axe-labels, text.data-labels, text.radar-tooltip{
 	font-size: 10px;
 	font-family: Helvetica, sans-serif;
 	fill: #888;
